test/language/spec/containment/invalid/external_on_constructor.topo
// TEST: external-on-constructor
// EXPECT-ERROR: expected type member declaration

namespace app {

public:
  type Client {
  public:
    external Client();
  }

}
